force-app/main/default/objects/API_Configuration__mdt/API_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>API Configuration</label>
    <pluralLabel>API Configurations</pluralLabel>
</CustomObject>