force-app/main/default/objects/API_Configuration__mdt/fields/Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Milliseconds__c</fullName>
    <label>Timeout Milliseconds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>